echeck Changelog

2019-08-20  Eric Herman <eric@freesa.org>

	switch to "SPDX-License-Identifier: LGPL-3.0-or-later"

2019-01-25  Eric Herman <eric@freesa.org>

	* src/echeck.h: use defines for the CPP friendliness
	* misc/pre-tidy.patch: no longer needed
	* Makefile.am: no pre-tidy; misc directory no longer exists

2017-06-22  Eric Herman <eric@freesa.org>

	Added the "check_double_scaled_epsilon" family of defines.
	The epsilon is scaled relative to the "expected" value - be
	careful if the value passed in as "expected" has side effects,
	as this value is repeated in the #define.

	* src/echeck.h: add the "check_double_scaled_epsilon" family
	* tests/test_check_double.c: call the function
	* misc/pre-tidy.patch: respin

2017-09-08  Eric Herman <eric@freesa.org>

	Add check_double(actual, expected, epsilon)

	* src/echeck.h: prototype
	* src/echeck.c: impl
	* tests/test_check_double.c: some basic checks
	* misc/pre-tidy.patch: respin
	* Makefile.am: add test
	* .gitignore: add test

2017-09-07  Eric Herman <eric@freesa.org>

	pass "const char **" for lists of constant strings

2016-06-16  Eric Herman <eric@freesa.org>

	LGPLv3+ friendly structure

	* src/echeck.h: boilerplate LGPLv3+
	* src/echeck.c: boilerplate LGPLv3+
	* README: new file name/locations
	* Makefile.am: include COPYING.GPL3
	* misc/gpl-3.0.txt: renamed to COPYING.GPL3
	* misc/lgpl-3.0.txt: renamed to COPYING
	* COPYING: renamed from misc/lgpl-3.0.txt
	* COPYING.GPL3: renamed from misc/gpl-3.0.txt

2016-06-16  Eric Herman <eric@freesa.org>

	* COPYING: boilerplate LGPLv3+
	* README: reference misc/
	* Makefile.am: include misc/
	* COPYING.GPL3: renamed misc/gpl-3.0.txt
	* COPYING.LGPL3: renamed misc/lgpl-3.0.txt

2016-06-14  Eric Herman <eric@freesa.org>

	* src/echeck.h: make nice for c++
	* misc/pre-tidy.patch: comment out block before running indent
	* Makefile.am: update "make tidy"

2016-06-06  Eric Herman <eric@freesa.org>

	(unsigned) int checks now use long check code.
