@@ -29,6 +29,8 @@
 #endif /* __STDC_VERSION__ */
 
 Echeck_begin_C_functions
+/* ensure not-null, default to stderr */
+FILE *echeck_ensure_stream(FILE *stream);
 /*check char*/
 int echeck_char_m(FILE *err, const char *func, const char *file, int line,
 		  char actual, char expected, const char *msg);
